# labelImgFixed

./: .gitignore  labelImg.py  main.py  pyproject.toml  setup_linux.md
libs/: canvas.py  resources.py  shape.py  yolo_io.py
